<resources>
    <string name="app_name">Instiflo</string>
    <string name="login_email_hint">Email ID</string>
    <string name="login_password_hint">Password</string>
    <string name="next_button_text">Next</string>
    <string name="cancel_button_text">Cancel</string>
    <string name="google_sign_in">Sign In with Google</string>
    <string name="navigation_drawer_open">Navigation Drawer Opened</string>
    <string name="navigation_drawer_close">Navigation Drawer Closed</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_my_product">My Products</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="SENDER_ID">561412963049</string>
</resources>
