<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.LoginFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:orientation="vertical"
        android:padding="24dp">

        <ImageView
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:scaleType="center"
            app:srcCompat="@drawable/instiflo_dark"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="48dp"
            android:layout_marginBottom="32dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="72dp"
            android:fontFamily="@font/raleway_thin"
            android:text="@string/app_name"
            android:textAppearance="@style/TextAppearance.Instiflo.Title"
            android:textSize="30sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.Instiflo.TextInputLayout"
            android:layout_margin="4dp"
            android:hint="Username"
            app:errorEnabled="true"
            android:id="@+id/signup_username_text_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLines="1"
                android:id="@+id/signup_username_edit_text"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_password_hint"
            style="@style/Widget.Instiflo.TextInputLayout"
            android:layout_margin="4dp"
            app:errorEnabled="true"
            android:id="@+id/signup_password_text_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:id="@+id/signup_password_edit_text"
                android:maxLines="1"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Confirm Password"
            style="@style/Widget.Instiflo.TextInputLayout"
            android:layout_margin="4dp"
            app:errorEnabled="true"
            android:id="@+id/signup_confirm_password_text_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:id="@+id/signup_confirm_password_edit_text"
                android:maxLines="1"/>

        </com.google.android.material.textfield.TextInputLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Widget.Instiflo.Button"
                android:text="Sign Up"
                android:id="@+id/signup_button"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/signup_cancel_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Widget.Instiflo.Button.TextButton"
                android:text="@string/cancel_button_text"
                android:layout_toStartOf="@id/signup_button"
                android:layout_marginEnd="12dp"
                android:layout_marginRight="12dp"/>

        </RelativeLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/back_to_login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Back to Login"
            android:layout_gravity="center_horizontal"
            style="@style/Widget.Instiflo.Button.OutlinedButton"
            android:layout_marginTop="16dp"/>
    </LinearLayout>

</ScrollView>